--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,7 +1,10 @@
 .header {
   background-color: #3b1f6d;
-  line-height: 0.36rem;
+  height: 37px;
 }
 .headcolor {
   color: #3b1f6d;
+}
+.github {
+  font-size: 1rem;
 }
