--- a/spectre/src/spectre.scss
+++ b/spectre/src/spectre.scss
@@ -12,9 +12,9 @@
 // @import "asian";
 // @import "tables";
 @import "buttons";
-@import "forms";
-@import "labels";
-@import "codes";
+// @import "forms";
+// @import "labels";
+// @import "codes";
 @import "media";
 
 // Layout
@@ -26,21 +26,21 @@
 @import "avatars";
 // @import "badges";
 // @import "breadcrumbs";
-@import "bars";
+// @import "bars";
 @import "cards";
 // @import "chips";
-@import "dropdowns";
-@import "empty";
+// @import "dropdowns";
+// @import "empty";
 @import "menus";
-@import "modals";
-@import "navs";
-@import "pagination";
+// @import "modals";
+// @import "navs";
+// @import "pagination";
 // @import "panels";
 // @import "popovers";
 // @import "steps";
 // @import "tabs";
 // @import "tiles";
-@import "toasts";
+// @import "toasts";
 // @import "tooltips";
 
 // Utility classes
