--- a/src/style/index.css
+++ b/src/style/index.css
@@ -14,16 +14,6 @@ body {
   box-sizing: border-box;
 }
 
-#app {
-  height: 100%;
-}
-
-#appcontainer {
-  min-height: 480px;
-  height: 100%;
-  padding: 0 10px;
-}
-
 .off-canvas .off-canvas-sidebar {
   min-width: 14rem;
   background: #fff;
@@ -36,12 +26,7 @@ body {
   left: 0.08rem;
   top: 0rem;
 }
-.rightpos {
-  right: 0.08rem;
-}
-.listFeeds {
-  padding-bottom: 50px;
-}
+
 #articles h1 {
   font-size: 17px;
 }
@@ -54,24 +39,9 @@ body {
 #articles h4 {
   font-size: 14px;
 }
-#articles {
-  padding-bottom: 40px;
-  margin: 10px auto;
-}
-.article-body {
-  overflow-wrap: break-word;
-  line-height: 1.7;
-}
-.article-image {
-  margin-left: -7px;
-  margin-right: -7px;
-  margin-bottom: 1rem;
-}
-.article-image img {
-  width: 100%;
-}
+
 figure {
-  margin-bottom: 1rem;
+  margin: 0 0 1rem;
 }
 figure img {
   width: 100%;
@@ -82,48 +52,13 @@ figure img {
 .menu {
   box-shadow: none;
 }
-
-.mb-2 {
-  margin-bottom: 0.4rem;
-}
 footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   background-color: #f1f1f1;
 }
-
-.footertext {
-  padding: 0.5rem;
-  font-size: 0.75rem;
-}
-
-.text-light .gh-count,
-.text-light .gh-btn {
-  color: #fff !important;
-}
-
 pre {
   white-space: pre-line;
   font-size: 14px;
-}
-
-.card-footer .btn,
-.article-body,
-.card-body {
-  font-size: 0.7rem;
-}
-
-.article-subtitle,
-.card-subtitle {
-  font-size: 0.7rem;
-}
-.article-subtitle .author,
-.card-subtitle .author {
-  margin: 0;
-}
-.article-subtitle .pubdate,
-.card-subtitle .pubdate {
-  font-size: 0.6rem;
-  margin: 0;
 }
